<resources>
    <string name="nombre_del_curso2">Nombre del curso</string>
    <string name="grado_del_curso2">Grado del curso</string>
    <string name="nombre2">Nombre</string>
    <string name="primer_apellido2">Primer apellido</string>
    <string name="segundo_apellido2">Segundo apellido</string>
    <string name="correo2">Correo</string>
    <string name="calificacion2">Calificacion</string>
    <string name="grado_escolar2">Grado escolar</string>

    <string name="curso_seleccionado2">Curso seleccionado</string>
    <string name="id_tarea2">ID de la tarea generada</string>
    <string name="fecha_tarea2"></string>
    <string name="nombre_estudiante2">Nombre del estudiante</string>
    <string name="fecha_estudiante2">Fecha de nacimiento</string>
    <string name="carnet_estudiante2">Carnet del estudiante</string>
    <string name="encargado_estudiante2">Encargado legal del estudiante</string>
    <string name="Telefono_estudiante2">Telefono del encargado</string>
    <string name="nota_estudiante2">Nota del estudiante</string>

    <string name="profesor_encargado2">Profesor encargado</string>
    <string name="titulo_noticia2">Titulo de la noticia</string>
    <string name="titulo_tarea2">Titulo de la tarea</string>
    <string name="descripcion_noticia2">Descripcion de la noticia</string>
    <string name="descripcion_tarea2">Descripcion de la tarea</string>
    <string name="nombre_docente2">Nombre del docente</string>
    <string name="correo_docente2">Correo electronico</string>
    <string name="Cedula_docente2">Carnet del docente</string>
    <string name="calificacionpromedio2">5.0</string>

    <string name="app_name">Random</string>
    <string name="administrador">Administrador</string>
    <string name="estudiante">Estudiante</string>
    <string name="docente">Docente</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="iniciar">Iniciar</string>
    <string name="rbayuda">Ayuda</string>
    <string name="olvide_la_contrase_a">Olvide la contraseña</string>
    <string name="curso_seleccionado">Curso seleccionado</string>
    <string name="salir">Salir</string>
    <string name="chat_del_curso">Chat del curso</string>
    <string name="publicarnoticia">PublicarNoticia</string>
    <string name="asignar_tarea">Asignar tarea</string>
    <string name="lista_de_estudiantes">Lista de estudiantes</string>
    <string name="asignacion">Asignacion</string>
    <string name="cursos">Cursos</string>
    <string name="docentes">Docentes</string>
    <string name="estudiantes">Estudiantes</string>
    <string name="gestion_de_cursos">Gestion de Cursos</string>
    <string name="agregar">Agregar</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="atras">Atras</string>
    <string name="agregar_curso">Agregar Curso</string>
    <string name="nombre_del_curso">Nombre del curso</string>
    <string name="grado_del_curso">Grado del curso</string>
    <string name="horario">- - - - - - - Horario - - - - - - -</string>
    <string name="listacursos">- - - - - - Lista de cursos - - - - - -</string>
    <string name="inicio">Inicio</string>
    <string name="fin">Fin</string>
    <string name="dia">Dia</string>
    <string name="eliminar_hora">Eliminar hora</string>
    <string name="agregar_hora">Agregar Hora</string>
    <string name="confirmar">Confirmar</string>
    <string name="eliminar_curso">Eliminar curso</string>
    <string name="modificar_curso">Modificar curso</string>
    <string name="gestion_de_docentes">Gestion de docentes</string>
    <string name="agregar_docente">Agregar docente</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="segundo_apellido">Segundo apellido</string>
    <string name="correo">Correo</string>
    <string name="calificacion">Calificacion</string>
    <string name="eliminar_docente">Eliminar docente</string>
    <string name="modificar_docente">Modificar docente</string>
    <string name="gestion_de_estudiantes">Gestion de estudiantes</string>
    <string name="agregar_estudiante">Agregar estudiante</string>
    <string name="grado_escolar">Grado escolar</string>
    <string name="modificar_estudiante">Modificar estudiante</string>
    <string name="eliminar_estudiante">Eliminar estudiante</string>
    <string name="asignacion_de_docentes_y_estudiantes">Asignacion de docentes y estudiantes</string>
    <string name="asignacion_de_docentes">Asignacion de docentes</string>
    <string name="asignacion_de_estudiantes">asignacion de estudiantes</string>
    <string name="listacursosdocente">- - - - - - Lista de cursos del docente - - - - - -</string>
    <string name="listacursosestudiante">- - - - - - Lista de cursos del estudiante - - - - - -</string>
    <string name="titulo_noticia">Titulo de la noticia</string>
    <string name="descripcion_noticia">Descripcion de la noticia</string>
    <string name="publicar">Publicar</string>
    <string name="id_tarea">ID de la tarea</string>
    <string name="titulo_tarea">Titulo de la tarea</string>
    <string name="fecha_tarea">Fecha de la tarea</string>
    <string name="descripcion_tarea">Descripcion de la tarea</string>
    <string name="nombre_estudiante">Nombre del estudiante</string>
    <string name="fecha_estudiante">Fecha de nacimiento</string>
    <string name="carnet_estudiante">Carnet</string>
    <string name="encargado_estudiante">Encargado legal</string>
    <string name="Telefono_estudiante">Telefono del encargado legal</string>
    <string name="nota_estudiante">Nota del estudiante</string>
    <string name="profesor_encargado">Profesor encargado</string>
    <string name="noticias">Noticias</string>
    <string name="tareas">Tareas</string>
    <string name="nombre_docente">Nombre del docente</string>
    <string name="correo_docente">Correo electronico</string>
    <string name="Cedula_docente">Carnet del docente</string>
    <string name="calificacionpromedio">Calificacion promedio</string>
    <string name="calificar_docente">Calificar docente</string>
</resources>