<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvGestionEstudiantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/gestion_de_estudiantes"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="368dp"
        android:layout_height="330dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#525665"
            android:text="@string/agregar"
            app:cornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#525665"
            android:text="@string/eliminar"
            app:cornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAgregar"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnModificar"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#525665"
            android:text="@string/modificar"
            app:cornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEliminar"
            app:strokeWidth="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:backgroundTint="#D3C8C8"
        android:text="@string/atras"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>