<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="373dp"
        android:layout_height="408dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnChat"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#525665"
            android:text="@string/chat_del_curso"
            app:cornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLista"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnNoticia"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#525665"
            android:text="@string/publicarnoticia"
            app:cornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnTarea"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#525665"
            android:text="@string/asignar_tarea"
            app:cornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNoticia"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnLista"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#525665"
            android:text="@string/lista_de_estudiantes"
            app:cornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTarea"
            app:strokeWidth="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/lbCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/curso_seleccionado"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sCursos"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbCurso"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:backgroundTint="#BD1414"
        android:text="@string/salir"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>